# resilient-dns

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  failure-modes.md  index.md  observability.md  operations.md  profiles.md  protocol.md  relay.md  roadmap.md  upstream.md
src/resilientdns/: config.py  main.py  metrics.py  refresh_warmup.py  relay_forwarder.py  relay_startup_check.py  relay_types.py
src/resilientdns/cache/: memory.py
src/resilientdns/dns/: handler.py  server.py  (+1 more)
tests/: conftest.py  test_cache_clear.py  test_cache_eviction_metrics.py  test_cache_lru_eviction.py  test_cache_stats_snapshot.py  test_config_validation.py  test_docs_fences.py  test_failure_modes.py  test_fake_relay_smoke.py  test_invariants.py  test_metrics_cache_counts.py  test_metrics_http.py  test_metrics_singleflight_dedup.py  test_negative_ttl_soa.py  test_qtype_swr.py  test_refresh_hits.py  test_refresh_queue.py  test_refresh_scheduler.py  test_refresh_warmup.py  test_refresh_warmup_startup.py  test_refresh_watchdog.py  test_relay_integration_env.py  test_relay_startup_check.py  test_relay_types.py  test_relay_upstream_forwarder.py  test_server_inflight.py  test_signal_handlers.py  test_singleflight.py  test_tcp_server_framing.py  test_tcp_upstream_forwarder.py  test_txid_cache.py  test_udp_server_truncation.py  test_udp_upstream_forwarder_concurrency.py  test_upstream_forwarder_close.py  test_upstream_forwarder_closed.py
tests/fake_relay/: __init__.py  app.py  fixtures.py  types.py
tools/dns-check/: dns_check.py
(+2 files in other folders)
